--- a/index.html
+++ b/index.html
@@ -9,19 +9,18 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
-<header >
-    <div class="flexbox span70">
-    <div style="flex-grow: 3"></div>
-    <nav class="rightalign"style="flex-grow: 3;">
-        <img src="/images/icons/profile.png" alt="">
-        <a href="https://google.com">Idea</a>
+<div class="header">
+    <div class="flexbox span70 normalizer">
+        <div class="logo" style="flex-grow: 3" ><img src="/images/icons/logo.png" alt="">
+            <a href="https://google.com">Idea</a></div>
+    <nav class="rightalign"style="flex-grow: 3;align-self: center">
         <a href="https://google.com">Home</a>
         <a href="https://google.com">About</a>
         <a href="https://google.com">Works</a>
-        <img src="/images/icons/profile.png" alt="">
+        <img  class="logo"  src="/images/icons/profile.png" alt="">
       </nav>
     </div>
-</header>
+</div>
 <body>
     
     
