--- a/index.html
+++ b/index.html
@@ -11,16 +11,42 @@
 </head>
 <div class="header">
     <div class="flexbox span70 normalizer">
-        <div class="logo" style="flex-grow: 3" ><img src="/images/icons/logo.png" alt="">
-            <a href="https://google.com">Idea</a></div>
-    <nav class="rightalign"style="flex-grow: 3;align-self: center">
-        <a href="https://google.com">Home</a>
-        <a href="https://google.com">About</a>
-        <a href="https://google.com">Works</a>
-        <img  class="logo"  src="/images/icons/profile.png" alt="">
-      </nav>
+        <div class="" ><img src="/images/icons/logo.png" alt="">
+         </div>
+         <div  style="flex-grow: 3"><a href="https://google.com">Idea</a></div>
+        <div>
+            <nav class="rightalign"style="flex-grow: 3;align-self: center">
+            <a href="https://google.com">Home</a>
+            <a href="https://google.com">About</a>
+            <a href="https://google.com">Works</a>
+            <img  class="logo"  src="/images/icons/profile.png" alt="">
+            </nav>
+    </div>
     </div>
 </div>
+
+<br>
+<br>
+
+    <div class="flexbox span70 ">
+        <div class="flexbox2 ">
+        <div class="logo" ><img src="/images/icons/logo.jpg" alt=""></div>
+         <div  style="flex-grow: 3"><a href="https://google.com">Idea</a></div>
+        </div>
+        <div>
+            <nav class="rightalign"style="flex-grow: 3;align-self: center">
+            <a href="https://google.com">Home</a>
+            <a href="https://google.com">About</a>
+            <a href="https://google.com">Works</a>
+            <img  class="logo"  src="/images/icons/profile.png" alt="">
+            </nav>
+        </div>
+    </div>
+
+
+
+
+
 <body>
     
     
