--- a/index.html
+++ b/index.html
@@ -10,20 +10,24 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="flex-container header">
-        <div style="flex-grow: 3"> Landing</div>
+<div class="nav" style="width:100%">
+    <div class="nav2">
+    <div class="flex-container header" >
+        <div class="icon" ><img src="https://i.ibb.co/NNDxJhf/logo.png" alt="logo" ></div>
+        <div class="idea" style="flex-grow: 0; padding-left: 1rem;">Idea</div>
         <div style="flex-grow: 3"></div>
-        <div style="flex-grow: 4;">
+        <div style="flex-grow: 0;">
             <ul class="nav-bar">
                 <li ><a class="active" href="">Home</a></li>
-                <li><a href="">Feature</a></li>
-                <li><a href="">Reviews</a></li>
-                <li><a href="">Pricing</a></li>
-                <li><a href="">FAQ</a></li>
-                <li><a style="border:1px;border-style: solid;" href="">Get Started</a></li>
+                <li><a href="">About</a></li>
+                <li><a href="">Works</a></li>
+                                             <!-- <li><a style="border:1px;border-style: solid;" href="">Get Started</a></li> -->
             </ul>
-        </div>
+            </div>
+            <div class="icon"><img src="https://i.ibb.co/1Gsq1rM/profile.png"  alt="logo" ></div>
     </div>
+</div>
+</div>
     <br><br><br>
 <div class="products center debug2">
     <main class="deals center">
