--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Templete</title>
     <link rel="icon" type="image/png" href="http://www.google.com/s2/favicons?domain=javascript.com/">
     <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"> -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -14,7 +17,7 @@
     <div class="nav2">
     <div class="flex-container header" >
         <div class="icon" ><img src="https://i.ibb.co/NNDxJhf/logo.png" alt="logo" ></div>
-        <div class="idea" style="flex-grow: 0; padding-left: 1rem;">Idea</div>
+        <div class="idea" style="flex-grow: 0; padding-left: 1rem;"><b>Idea</b> </div>
         <div style="flex-grow: 3"></div>
         <div style="flex-grow: 0;">
             <ul class="nav-bar">
@@ -29,54 +32,25 @@
 </div>
 </div>
     <br><br><br>
-<div class="products center debug2">
+<div class="box">
+    <div class="box1">
+        <h1>Top Player</h1>
+    </div>
+</div>
+
+<!-- <div class="products center debug2">
     <main class="deals center">
         <article class="sale-item center">
             <img class="product-thumbnail" src="product.jpg" alt="">
             <h1>Products are here</h1>
             <p>Products are here</p>
-                        <ul>
+            <ul>
                 <li>Great</li>
                 <li>product</li>
             </ul>
         </article>
-        <article class="sale-item center">
-            <img class="product-thumbnail" src="product.jpg" alt="">
-            <h1>Products are here</h1>
-            <p>Products are here</p>
-                        <ul>
-                <li>Great</li>
-                <li>great</li>
-            </ul>
-        </article>
-        <article class="sale-item center">
-            <img class="product-thumbnail" src="product.jpg" alt="">
-            <h1>Products are here</h1>
-            <p>Products are here</p>
-                        <ul>
-                <li>Great</li>
-                <li>great</li>
-            </ul>
-        </article>
-        <article class="sale-item center">
-            <img class="product-thumbnail" src="product.jpg" alt="">
-            <h1>Products are here</h1>
-            <p>Products are here</p>
-                        <ul>
-                <li>Great</li>
-                <li>great</li>
-            </ul>
-        </article>
-        <article class="sale-item center">
-            <img class="product-thumbnail" src="product.jpg" alt="">
-            <h1>Products are here</h1>
-            <p>Products are here</p>
-                        <ul>
-                <li>Great</li>
-                <li>great</li>
-            </ul>
-        </article>
+        
     </main>
-    </div>
+    </div> -->
 </body>
 </html>
