--- a/index.html
+++ b/index.html
@@ -12,9 +12,12 @@
 <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
+
+<!--                                                                                                     NAVIGATION -->
+
 <body>
 <div class="nav" style="width:100%">
-    <div class="nav2">
+    <div class="nav2 w60">
     <div class="flex-container header" >
         <div class="icon" ><img src="https://i.ibb.co/NNDxJhf/logo.png" alt="logo" ></div>
         <div class="idea" style="flex-grow: 0; padding-left: 1rem;"><b>Idea</b> </div>
@@ -24,19 +27,51 @@
                 <li ><a class="active" href="">Home</a></li>
                 <li><a href="">About</a></li>
                 <li><a href="">Works</a></li>
-                                             <!-- <li><a style="border:1px;border-style: solid;" href="">Get Started</a></li> -->
             </ul>
             </div>
             <div class="icon"><img src="https://i.ibb.co/1Gsq1rM/profile.png"  alt="logo" ></div>
     </div>
 </div>
 </div>
-    <br><br><br>
-<div class="box">
-    <div class="box1">
-        <h1>Top Player</h1>
+
+
+    <br><br>
+
+
+<div class="box w60">
+    <h1>Top Player</h1>
+    <!-- <div class="box1 flex"> -->
+<div class="grid">
+    <div class="player-card flexonly">
+        <div><img src="https://i.ibb.co/1Gsq1rM/profile.png"  alt="logo" ></img></div>
+        <div><h3>John Smith</h3></div>
     </div>
+    <div class="player-card flexonly">
+        <div><img src="https://i.ibb.co/1Gsq1rM/profile.png"  alt="logo" ></img></div>
+        <div><h3>Pro Rasel</h3></div>
+    </div>
+    <div class="player-card flexonly">
+        <div><img src="https://i.ibb.co/1Gsq1rM/profile.png"  alt="logo" ></img></div>
+        <div><h3>Abu Sufian
+        </h3></div>
+    </div>
+    <div class="player-card flexonly">
+        <div><img src="https://i.ibb.co/1Gsq1rM/profile.png"  alt="logo" ></img></div>
+        <div><h3>Shajedul Karim</h3></div>
+    </div>
+    <div class="player-card flexonly">
+        <div><img src="https://i.ibb.co/1Gsq1rM/profile.png"  alt="logo" ></img></div>
+        <div><h3>Maruf Ahmed</h3></div>
+    </div>
+    <div class="player-card flexonly">
+        <div><img src="https://i.ibb.co/1Gsq1rM/profile.png"  alt="logo" ></img></div>
+        <div><h3>Mujahid</h3></div>
+    </div>
+    </div>
+    <hr class="w90">
 </div>
+
+<!-- </div> -->
 
 <!-- <div class="products center debug2">
     <main class="deals center">
