--- a/index.html
+++ b/index.html
@@ -69,6 +69,27 @@
     </div>
     </div>
     <hr class="w90">
+
+                                                                                            <!-- Top Blog -->
+
+    <h1>Top Blog</h1>
+
+    <div class="grid-blog">
+        <div class="blog-card flexonly">
+            <div><img class="w90" style="padding:0;" src="https://i.ibb.co/gRFy9hS/blog-1.png" alt="blog-1" border="0"></img></div>
+            <div><h3>13 of My Favorite UI/UX Goodies</h3>By <span>By Danny Sapio</span></div>
+        </div>
+
+        <div class="blog-card flexonly">
+            <div ><img class="w90"  style="padding:0;"  src="https://i.ibb.co/gRFy9hS/blog-1.png" alt="blog-1" border="0"></img></div>
+            <div><h3>13 of My Favorite UI/UX Goodies </h3>By <span>By Danny Sapio</div>
+            
+        </div>
+        </div>
+
+
+
+
 </div>
 
 <!-- </div> -->
