finally made responsive

--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
     <br><br>
 
 
-<div class="box w60">
+<div class="container">
     <h1>Top Player</h1>
     <!-- <div class="box1 flex"> -->
-<div class="grid">
+<div class="grid-player">
     <div class="player-card flexonly">
         <div><img src="images/players/player-1.png"  alt="logo" ></img></div>
         <div><h3>John Smith</h3></div>
@@ -103,7 +103,7 @@
 <br><br>
 
 
-<div class="box w60">
+<div class="container">
     <h1>Latest course</h1>
 
     <div class="grid-course">
