--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div class="nav2 w60">
     <div class="flex-container header" >
         <div class="icon" ><img src="https://i.ibb.co/NNDxJhf/logo.png" alt="logo" ></div>
-        <div class="idea" style="flex-grow: 0; padding-left: 1rem;"><b>Idea</b> </div>
+        <div class="idea" style="flex-grow: 0; "><b>Idea</b> </div>
         <div style="flex-grow: 3"></div>
         <div style="flex-grow: 0;">
             <ul class="nav-bar">
