--- a/index.html
+++ b/index.html
@@ -5,12 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Leaderboard</title>
+    <script src="https://kit.fontawesome.com/28dc4597ad.js" crossorigin="anonymous"></script>
     <link rel="icon" type="image/png" href="https://www.google.com/s2/favicons?domain=javascript.com/">
     <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"> -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+
 </head>
 
 <!--                                                                                                     NAVIGATION -->
@@ -111,24 +113,30 @@
             <div style="padding-right:0;"><img class="w80"  src="images/courses/course-1.png" alt="blog-1" border="0"></img></div>
             <div><h3 style="padding-bottom: 0">13 of My Favorite UI/UX Goodies</h3><span style="color:red">Reed Krakoff</span></div>
             <br>
-            <span style="display:flex"><img class="star" src="images/icons/star.png" alt="images/icons/star.png"><img class="star" src="images/icons/star.png" alt="images/icons/star.png"><img class="star" src="images/icons/star.png" alt=""><img class="star" src="images/icons/star.png" alt=""><img class="star" src="images/icons/star.png" alt="">
-                <span class="rating">4.3</span>  <span class="time">01:30 hr</span>            </span>
+            <span style="display:flex">
+                <i class="star fas fa-star"></i><i class="star fas fa-star"></i><i class="star fas fa-star"></i><i class="star fas fa-star"></i><i class="star2 fas fa-star"></i>
+                <span class="rating">4.3</span>  <span class="time"><i class="far fa-clock"></i>01:30 hr</span>
+            </span>
         </div>
 
         <div class="course-card ">
             <div style="padding-right:0;"><img class="w80"  style="padding:0;"  src="images/courses/course-2.png" alt="blog-1" border="0"></img></div>
             <div><h3 style="padding-bottom: 0">13 of My Favorite UI/UX Goodies </h3><span style="color:red">Walter Scott</div>
                 <br>
-                <span style="display:flex"><img class="star" src="images/icons/star.png" alt="images/icons/star.png"><img class="star" src="images/icons/star.png" alt="images/icons/star.png"><img class="star" src="images/icons/star.png" alt=""><img class="star" src="images/icons/star.png" alt=""><img class="star" src="images/icons/star.png" alt="">
-                    <span class="rating">4.3</span>  <span class="time">01:30 hr</span>            </span>
+                <span style="display:flex">
+                    <i class="star fas fa-star"></i><i class="star fas fa-star"></i><i class="star fas fa-star"></i><i class="star fas fa-star"></i><i class="star2 fas fa-star"></i>
+                    <span class="rating">4.3</span>  <span class="time"><i class="far fa-clock"></i>01:30 hr</span>
+                </span>
         </div>
         
         <div class="course-card ">
             <div style="padding-right:0;"><img class="w80"  style="padding:0;"  src="images/courses/course-3.png" alt="blog-1" border="0"></img></div>
             <div><h3 style="text-decoration: none;">13 of My Favvorite  UI/UX  Goodies </h3><span style="color:red">Reed Krakoff</div>
                 <br>
-                <span style="display:flex"><img class="star" src="images/icons/star.png" alt="images/icons/star.png"><img class="star" src="images/icons/star.png" alt="images/icons/star.png"><img class="star" src="images/icons/star.png" alt=""><img class="star" src="images/icons/star.png" alt=""><img class="star" src="images/icons/star.png" alt="">
-                <span class="rating">4.3</span>  <span class="time">01:30 hr</span>            </span>
+                <span style="display:flex">
+                    <i class="star fas fa-star"></i><i class="star fas fa-star"></i><i class="star fas fa-star"></i><i class="star fas fa-star"></i><i class="star2 fas fa-star"></i>
+                    <span class="rating">4.3</span>  <span class="time"><i class="far fa-clock"></i>01:30 hr</span>
+                </span>
         </div>
         </div>
 
